# halflife-updated-cmake

src/: CMakeLists.txt
src/cl_dll/: CMakeLists.txt  ammo.cpp  ammo.h  ammo_secondary.cpp  ammohistory.cpp  ammohistory.h  battery.cpp  bench.h  camera.h  cdll_int.cpp  cl_dll.dsp  cl_dll.h  cl_util.h  com_weapons.cpp  com_weapons.h  death.cpp  demo.cpp  demo.h  entity.cpp
src/common/: beamdef.h  cl_entity.h  com_model.h  con_nprint.h  const.h  crc.h  cvardef.h  demo_api.h  director_cmds.h  dlight.h  dll_state.h
src/dlls/: CMakeLists.txt  activity.h  activitymap.h  aflock.cpp  agrunt.cpp  airtank.cpp  hl.def
src/linux/: libSDL2-2.0.so.0  libSDL2-2.0.so.0.dbg
src/linux/libSDL2-2.0.0.dylib.dSYM/Contents/Resources/DWARF/: libsdl2-2.0.0.dylib
src/ricochet/cl_dll/: death.cpp
